# py-fixer

./: .gitignore  LICENSE  README.md  pyproject.toml
pyfixer/: __init__.py  __main__.py  cli.py  config.py  editor.py  explainer.py  journal.py  prompts.py  runner.py
pyfixer/data/: bug-py-vscode-0.1.0.vsix  py-fixer-0.1.0.vsix
